--- a/index.html
+++ b/index.html
@@ -740,7 +740,13 @@
                 </div>
                 <!-- Release Notes Content -->
                 <div class="space-y-4">
-                  <div class="border-l-4 border-indigo-500 pl-4 py-1">
+                  <div class="border-l-4 border-rose-500 pl-4 py-1">
+                    <h3 class="font-bold text-lg text-slate-800">v1.7.1: Hotfix</h3>
+                    <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
+                        <li>⌨️ <b>Keyboard:</b> Fixed an issue where the keyboard could disappear.</li>
+                    </ul>
+                  </div>
+                  <div class="border-l-4 border-indigo-500 pl-4 py-1 opacity-75">
                     <h3 class="font-bold text-lg text-slate-800">v1.7.0: Themes & Time!</h3>
                     <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
                       <li>🎨 <b>Themes:</b> Added Dark Mode & High Contrast Mode.</li>
