--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Ramabhadra&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Ramabhadra&family=Caveat:wght@400;700&display=swap');
 
     #app {
       display: none;
@@ -81,7 +81,8 @@
     <header class="flex-none p-4 pb-2 border-b border-indigo-50 dark:border-slate-800 bg-white dark:bg-slate-900 z-20">
       <div class="max-w-lg mx-auto flex items-center justify-between">
         <!-- Left: Logo & Branding -->
-        <div class="flex items-center gap-2">
+        <div class="flex items-center gap-2 cursor-pointer hover:opacity-80 transition-opacity"
+          @click="showHelpModal = true" title="About WordLetta">
           <img src="/logo.png" alt="Logo" class="h-8 w-8 object-contain">
           <h1 class="font-['Ramabhadra'] text-xl tracking-wider text-slate-700 dark:text-slate-200 hidden xs:block">
             WORDLETTA</h1>
@@ -91,7 +92,7 @@
         <div class="flex items-center gap-3">
           <!-- Timer Pill -->
           <div
-            class="flex items-center gap-2 text-xs sm:text-sm font-mono font-bold text-slate-500 dark:text-slate-400 bg-slate-100 dark:bg-slate-800 pl-3 pr-2 py-1.5 rounded-full cursor-pointer hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors border border-transparent hover:border-slate-300 dark:hover:border-slate-600"
+            class="flex items-center justify-center gap-2 min-w-[5.5rem] tabular-nums text-xs sm:text-sm font-mono font-bold text-slate-500 dark:text-slate-400 bg-slate-100 dark:bg-slate-800 px-3 py-1.5 rounded-full cursor-pointer hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors border border-transparent hover:border-slate-300 dark:hover:border-slate-600"
             @click="togglePause()" title="Pause Game">
             <span x-text="headerTime">0s</span>
             <!-- Pause Icon (Only show if running) -->
@@ -760,7 +761,7 @@
             <!-- Title / Close-->
             <div class="flex items-start justify-between mb-6 border-b border-slate-100 pb-2">
               <h5 class="mr-3 text-slate-800 max-w-none text-xl font-bold">Release Notes <span
-                  class="text-sm font-normal text-slate-400">v1.8.0</span></h5>
+                  class="text-sm font-normal text-slate-400">v1.8.1</span></h5>
               <button type="button" class="text-2xl font-bold text-slate-400 hover:text-slate-600 cursor-pointer"
                 @click="showReleaseNotesModal = false">&times;</button>
             </div>
@@ -850,6 +851,66 @@
           </div>
         </div>
 
+        <!-- 
+           HELP / INTRO MODAL
+        -->
+        <div x-show="showHelpModal" x-transition.opacity.duration.600ms style="display: none;"
+          class="fixed inset-0 z-30 flex items-center justify-center overflow-auto bg-slate-900 bg-opacity-40 backdrop-blur-sm">
+          <div class="w-4/5 md:w-1/2 lg:w-1/3 p-8 mx-auto bg-white rounded-xl shadow-2xl relative text-center"
+            @click.away="showHelpModal = false">
+
+            <!-- Logo Header -->
+            <div class="mb-8">
+              <img src="/logo.png" class="h-44 w-auto mx-auto">
+            </div>
+
+
+            <!-- Intro Text -->
+            <div class="text-slate-600 space-y-4 mb-8 text-sm leading-relaxed">
+              <p>Guess the <strong>WORDLETTA</strong> in 6 tries. Each guess must be a valid 6-letter word. Hit the
+                enter button to submit. After each guess, the color of the tiles will change to show how close your
+                guess was to the word.</p>
+              <p>Tackle the <strong>Daily Challenge</strong> for 6-letter puzzles once per day. Or play the
+                <strong>Endless Challenge</strong> for unlimited word fun at any length!
+              </p>
+
+              <div class="text-left mt-8">
+                <p class="font-bold text-xs text-slate-400 uppercase mb-2">Examples</p>
+                <div class="flex gap-1 mb-2">
+                  <div
+                    class="w-6 h-6 bg-emerald-500 text-white flex items-center justify-center font-bold rounded text-xs">
+                    W</div>
+                  <div class="text-xs flex items-center ml-2 text-slate-500">Letter is in the word and correct spot.
+                  </div>
+                </div>
+                <div class="flex gap-1 mb-2">
+                  <div
+                    class="w-6 h-6 bg-yellow-500 text-white flex items-center justify-center font-bold rounded text-xs">
+                    I</div>
+                  <div class="text-xs flex items-center ml-2 text-slate-500">Letter is in the word but wrong spot.</div>
+                </div>
+                <div class="flex gap-1">
+                  <div
+                    class="w-6 h-6 bg-slate-400 text-white flex items-center justify-center font-bold rounded text-xs">
+                    N
+                  </div>
+                  <div class="text-xs flex items-center ml-2 text-slate-500">Letter is not in the word.</div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Footer -->
+            <div class="border-t border-slate-100 pt-2">
+              <div class="font-['Caveat'] text-4xl text-slate-400 transform -rotate-2">
+                Enjoy! - Sean O
+              </div>
+            </div>
+
+            <button @click="showHelpModal = false"
+              class="absolute top-4 right-4 text-slate-300 hover:text-slate-500 text-2xl font-bold">&times;</button>
+          </div>
+        </div>
+
       </div><!-- /board -->
     </main>
 
@@ -887,7 +948,7 @@
       </div>
     </footer>
     <!-- PAUSE MODAL -->
-    <div x-show="isPaused" style="display: none;" x-transition.opacity.duration.300ms
+    <div x-show="isPaused && !showHelpModal" style="display: none;" x-transition.opacity.duration.300ms
       class="fixed inset-0 z-50 flex items-center justify-center bg-slate-900/40 backdrop-blur-md">
       <div
         class="bg-white dark:bg-slate-800 p-8 rounded-2xl shadow-2xl text-center transform scale-100 border border-slate-200 dark:border-slate-700">
