--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
             <!-- Title / Close-->
             <div class="flex items-start justify-between mb-6 border-b border-slate-100 pb-2">
               <h5 class="mr-3 text-slate-800 max-w-none text-xl font-bold">Release Notes <span
-                  class="text-sm font-normal text-slate-400">v1.8.2</span></h5>
+                  class="text-sm font-normal text-slate-400">v1.8.3</span></h5>
               <button type="button" class="text-2xl font-bold text-slate-400 hover:text-slate-600 cursor-pointer"
                 @click="showReleaseNotesModal = false">&times;</button>
             </div>
@@ -810,6 +810,12 @@
                 </div>
                 <!-- Release Notes Content -->
                 <div class="space-y-4">
+                  <div class="border-l-4 border-indigo-500 pl-4 py-1">
+                    <h3 class="font-bold text-lg text-slate-800">v1.8.3: Daily Sync</h3>
+                    <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
+                      <li>🔄 <b>Daily Challenge:</b> Fixed a bug where completing the challenge on one device didn't update others.</li>
+                    </ul>
+                  </div>
                   <div class="border-l-4 border-rose-500 pl-4 py-1">
                     <h3 class="font-bold text-lg text-slate-800">v1.7.2: Hotfix II - The Sequel</h3>
                     <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
