--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta charset="UTF-8" />
   <script type="module" src="./main.js"></script>
   <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="manifest" href="/manifest.json">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Ramabhadra&family=Caveat:wght@400;700&display=swap');
@@ -65,6 +66,33 @@
 
     .animate-pulse-cursor {
       animation: pulseCursor 2s infinite;
+    }
+
+    @keyframes shake {
+
+      0%,
+      100% {
+        transform: translateX(0);
+      }
+
+      10%,
+      30%,
+      50%,
+      70%,
+      90% {
+        transform: translateX(-4px);
+      }
+
+      20%,
+      40%,
+      60%,
+      80% {
+        transform: translateX(4px);
+      }
+    }
+
+    .animate-shake {
+      animation: shake 0.4s cubic-bezier(.36, .07, .19, .97) both;
     }
   </style>
   <title>WordLetta</title>
@@ -172,6 +200,26 @@
       <span x-text="toastMessage"></span>
     </div>
 
+    <!-- PWA Install Banner -->
+    <div x-show="showInstallPrompt" x-transition.opacity.duration.500ms
+      class="fixed bottom-4 left-4 right-4 z-40 bg-indigo-600 text-white p-4 rounded-xl shadow-2xl border border-indigo-400 flex flex-col sm:flex-row items-center justify-between gap-4">
+      <div class="flex items-center gap-3">
+        <div class="bg-white p-2 rounded-lg">
+          <img src="/logo.png" class="w-8 h-8 object-contain">
+        </div>
+        <div>
+          <h4 class="font-bold text-lg">Install WordLetta</h4>
+          <p class="text-xs text-indigo-100">Add to Home Screen for a better experience!</p>
+        </div>
+      </div>
+      <div class="flex gap-2 w-full sm:w-auto">
+        <button @click="dismissInstall"
+          class="flex-1 sm:flex-none py-2 px-4 rounded-lg text-sm font-bold text-indigo-200 hover:text-white hover:bg-indigo-700 transition-colors">Later</button>
+        <button @click="installPWA"
+          class="flex-1 sm:flex-none py-2 px-6 rounded-lg text-sm font-bold bg-white text-indigo-600 hover:bg-indigo-50 shadow-md transition-colors">Install</button>
+      </div>
+    </div>
+
     <main class="flex flex-auto flex-col justify-center">
       <div class="board p-3 lg:p-6 w-full max-w-full overflow-x-hidden">
 
@@ -183,7 +231,8 @@
               :class="{
                   'filled border-slate-500 dark:border-slate-400 scale-105' : letters[i],
                   'winner' : isWinner,
-                  'opacity-50' : (isWinner || isLoser)
+                  'opacity-50' : (isWinner || isLoser),
+                  'animate-shake' : isShaking && i < wordLength // Shake all boxes in current row
                 }">
               <input x-ref="box" :rel="i" x-model="letters[i]" maxlength="1"
                 class="font-['Ramabhadra'] inline-block font-bold text-3xl sm:text-4xl md:text-6xl lg:text-8xl text-center text-slate-900 dark:text-white h-14 w-14 sm:h-20 sm:w-20 md:h-24 md:w-24 lg:h-40 lg:w-48 lg:p-1 bg-transparent"
@@ -478,7 +527,30 @@
                   <pre class="text-xs md:text-sm font-mono leading-tight tracking-widest" x-text="shareBlurb"></pre>
                 </div>
 
-                <div class="mt-6 flex justify-center gap-3">
+                <!-- Dictionary Definition -->
+                <div x-show="dictionaryDef" x-transition.duration.300ms
+                  class="mb-6 text-left bg-indigo-50/50 p-4 rounded-lg border border-indigo-100">
+                  <template x-if="dictionaryDef.phonetic">
+                    <div class="text-xs text-slate-400 mb-1 font-mono" x-text="dictionaryDef.phonetic"></div>
+                  </template>
+                  <div class="font-bold text-slate-800 capitalize mb-1 flex items-baseline gap-2">
+                    <span x-text="dictionaryDef.word"></span>
+                    <span class="text-xs font-normal text-slate-500 italic" x-text="dictionaryDef.partOfSpeech"></span>
+                  </div>
+                  <div class="text-sm text-slate-600 leading-relaxed" x-text="dictionaryDef.definition"></div>
+                </div>
+
+                <div class="mt-6 flex flex-wrap justify-center gap-3">
+                  <button x-show="!dictionaryDef && !isWinner" @click="lookupDefinition()"
+                    class="whitespace-nowrap hover:bg-slate-100 hover:text-slate-800 transition-colors py-2 px-6 text-sm font-bold text-slate-500 bg-white border-2 border-slate-200 rounded-lg">
+                    Define
+                  </button>
+                  <!-- Show define for winner too if they want? Yes. -->
+                  <button x-show="!dictionaryDef && isWinner" @click="lookupDefinition()"
+                    class="whitespace-nowrap hover:bg-emerald-50 hover:text-emerald-700 transition-colors py-2 px-6 text-sm font-bold text-emerald-600 bg-white border-2 border-emerald-100 rounded-lg">
+                    Define
+                  </button>
+
                   <button @click="showShareModal = false; showNewGameModal = true"
                     class="whitespace-nowrap hover:bg-indigo-100 hover:text-indigo-800 transition-colors py-2 px-6 text-sm font-bold text-indigo-600 bg-white border-2 border-indigo-100 rounded-lg">
                     New Game
@@ -761,7 +833,7 @@
             <!-- Title / Close-->
             <div class="flex items-start justify-between mb-6 border-b border-slate-100 pb-2">
               <h5 class="mr-3 text-slate-800 max-w-none text-xl font-bold">Release Notes <span
-                  class="text-sm font-normal text-slate-400">v1.8.3</span></h5>
+                  class="text-sm font-normal text-slate-400">v1.8.5</span></h5>
               <button type="button" class="text-2xl font-bold text-slate-400 hover:text-slate-600 cursor-pointer"
                 @click="showReleaseNotesModal = false">&times;</button>
             </div>
@@ -769,11 +841,11 @@
             <!-- content -->
             <div class="text-slate-700 text-sm overflow-y-auto max-h-[60vh] pr-2">
               <div class="mb-6">
-                <h4 class="font-bold text-indigo-500 mb-2 text-base">🔊 Smoother Sounds</h4>
+                <h4 class="font-bold text-emerald-500 mb-2 text-base">✨ What's New</h4>
                 <ul class="list-disc list-outside ml-4 space-y-1 text-slate-500">
-                  <li><strong>Volume Fix:</strong> Fixed an issue where volume settings wouldn't stick.</li>
-                  <li><strong>Smooth Fades:</strong> Music now fades in and out smoothly when toggled.</li>
-                  <li><strong>Refined Slider:</strong> Volume slider is now much smoother to operate.</li>
+                  <li><strong>Dictionary:</strong> Look up definitions after the game!</li>
+                  <li><strong>Polished:</strong> Invalid words shake and vibrate.</li>
+                  <li><strong>Native Feel:</strong> Install as an App on your phone.</li>
                 </ul>
               </div>
 
@@ -810,10 +882,20 @@
                 </div>
                 <!-- Release Notes Content -->
                 <div class="space-y-4">
-                  <div class="border-l-4 border-indigo-500 pl-4 py-1">
+                  <div class="border-l-4 border-emerald-500 pl-4 py-1">
+                    <h3 class="font-bold text-lg text-slate-800">v1.8.5: The "Features" Update</h3>
+                    <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
+                      <li>📳 <b>Shake it off:</b> Invalid words now shake (and vibrate!)</li>
+                      <li>💾 <b>Daily Restore:</b> Progress saves so you can resume later.</li>
+                      <li>📱 <b>Install:</b> Add WordLetta to your home screen!</li>
+                      <li>📖 <b>Define:</b> Learn new words with the Dictionary lookup.</li>
+                    </ul>
+                  </div>
+                  <div class="border-l-4 border-indigo-500 pl-4 py-1 opacity-75">
                     <h3 class="font-bold text-lg text-slate-800">v1.8.3: Daily Sync</h3>
                     <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
-                      <li>🔄 <b>Daily Challenge:</b> Fixed a bug where completing the challenge on one device didn't update others.</li>
+                      <li>🔄 <b>Daily Challenge:</b> Fixed a bug where completing the challenge on one device didn't
+                        update others.</li>
                     </ul>
                   </div>
                   <div class="border-l-4 border-rose-500 pl-4 py-1">
