--- a/index.html
+++ b/index.html
@@ -808,6 +808,10 @@
                   class="text-xs bg-slate-100 hover:bg-rose-100 text-slate-500 hover:text-rose-600 px-3 py-2 rounded transition-colors">
                   Simulate 7-Day Streak 🔥
                 </button>
+                <button @click="debugSimulateDailyInProgress()"
+                  class="text-xs bg-slate-100 hover:bg-indigo-100 text-slate-500 hover:text-indigo-600 px-3 py-2 rounded transition-colors">
+                  Simulate Daily IP 🔄
+                </button>
                 <button @click="debugSimulateStreak(30)"
                   class="text-xs bg-slate-100 hover:bg-rose-100 text-slate-500 hover:text-rose-600 px-3 py-2 rounded transition-colors">
                   30-Day
