--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
               <!-- ENTER (Left of 3rd Row) -->
               <template x-if="rowIndex === keyboardRows.length - 1">
-                <div @click="enter" :class="!isReadyToCheck ? 'opacity-30' : 'animate-bounce'"
+                <div @click="enter" :class="cursor !== wordLength ? 'opacity-30' : 'animate-bounce'"
                   class="noselect cursor-pointer overflow-none flex items-center justify-center px-1 w-auto flex-[1.5] max-w-[3.5rem] md:max-w-[4.5rem] h-10 md:h-12 text-xs md:text-sm font-bold text-white bg-indigo-500 hover:bg-indigo-600 rounded shadow-sm disabled:opacity-40 transition-all duration-200">
                   ENTER</div>
               </template>
