--- a/index.html
+++ b/index.html
@@ -892,7 +892,17 @@
                 </div>
                 <!-- Release Notes Content -->
                 <div class="space-y-4">
-                  <div class="border-l-4 border-emerald-500 pl-4 py-1">
+                  <div class="border-l-4 border-indigo-500 pl-4 py-1">
+                    <h3 class="font-bold text-lg text-slate-800">v1.9.0: The Restoration Update</h3>
+                    <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
+                      <li>💾 <b>Robust Restore:</b> Daily Challenge progress now saves reliably.</li>
+                      <li>⏱️ <b>Smart Timer:</b> Timer continues exactly where you left off.</li>
+                      <li>🚫 <b>Shake It:</b> Invalid words now trigger shake & sound effects.</li>
+                      <li>⌨️ <b>Inputs:</b> Enter key only active when word is full length.</li>
+                      <li>🐛 <b>Fixes:</b> Solved frozen keyboard & game mode switching bugs.</li>
+                    </ul>
+                  </div>
+                  <div class="border-l-4 border-emerald-500 pl-4 py-1 opacity-75">
                     <h3 class="font-bold text-lg text-slate-800">v1.8.5: The "Features" Update</h3>
                     <ul class="list-disc list-inside text-sm text-slate-600 mt-1 space-y-1">
                       <li>📳 <b>Shake it off:</b> Invalid words now shake (and vibrate!)</li>
