--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
       </div>
     </footer>
     <!-- PAUSE MODAL -->
-    <div x-show="isPaused && !showHelpModal" style="display: none;" x-transition.opacity.duration.300ms
+    <div x-show="isPaused && !showHelpModal && !showReleaseNotesModal" style="display: none;" x-transition.opacity.duration.300ms
       class="fixed inset-0 z-50 flex items-center justify-center bg-slate-900/40 backdrop-blur-md">
       <div
         class="bg-white dark:bg-slate-800 p-8 rounded-2xl shadow-2xl text-center transform scale-100 border border-slate-200 dark:border-slate-700">
